[feat] fix switch of 2 nodes